--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
 <body>
 <div class="content">
     <div class="title"><h2>Техническое задание</h2></div>
+    <div class="download"><a href="тз.pages">Скачать</a></div>
     <div class="block">
         <div class="title">
             <h3>Потолок</h3>
         </div>
         <div class="list">
-            <p>1. Удаление побелки/шпаклевки до штукатурного слоя,</p>
-            <p>2. Грунтование потолка - грунтовка церезит СТ - 17,</p>
-            <p>3. Грунтование бетонных поверхностей, появившихся в ходе демонтажа - церезит СТ-19,</p>
-            <p>4. Оштукатуривание мест отвалившейся штукатурки на потолке - штукатурка ротбанд кнауф,</p>
-            <p>5. Шпаклевание потолка (примыкания стены/потолок) - шпаклевка кнауф фуген, кнауф ротбанд финиш,</p>
-            <p>6. Ошкуривание потолка, подготовка к покраске,</p>
-            <p>7. Грунтование потолка-церезит СТ - 17,</p>
-            <p>8. Окраска потолка 2 слоя (в случае не прокраса, нанесение доп. Слоя краски) - финколор оазис
-                вайт.</p>
+            <ol>
+                <li>Удаление побелки/шпаклевки до штукатурного слоя,</li>
+                <li>Грунтование потолка - грунтовка церезит СТ - 17,</li>
+                <li>Грунтование бетонных поверхностей, появившихся в ходе демонтажа - церезит СТ-19,</li>
+                <li>Оштукатуривание мест отвалившейся штукатурки на потолке - штукатурка ротбанд кнауф,</li>
+                <li>Шпаклевание потолка (примыкания стены/потолок) - шпаклевка кнауф фуген, кнауф ротбанд финиш,</li>
+                <li>Ошкуривание потолка, подготовка к покраске,</li>
+                <li>Грунтование потолка-церезит СТ - 17,</li>
+                <li>Окраска потолка 2 слоя (в случае не прокраса, нанесение доп. Слоя краски) - финколор оазис
+                    вайт.
+                </li>
+            </ol>
         </div>
     </div>
     <div class="block">
@@ -29,19 +33,27 @@
             <h3>Стены</h3>
         </div>
         <div class="list">
-            <p>1. Удаление побелки/шпаклевки до штукатурного слоя,</p>
-            <p>2. Удаление масляной краски со стен или нанесение глубокой насечки (длинна насечки не менее 5см ,100
-                насечек на 1кв.м),</p>
-            <p>3. Грунтование насечки (стены) и масляной краски -грунтовка церезит СТ-19,</p>
-            <p>4. Монтаж угловых профилей на наружные углы (по необходимости),</p>
-            <p>4. Оштукатуривание стен, где произведена насечка и отвалившейся штукатурки - штукатурка ротбанд
-                кнауф,</p>
-            <p>5. Грунтование стен полностью(верх/низ), подготовка под нанесение декоративной штукатурки - церезит
-                ст16,</p>
-            <p>6. Нанесение декоративной штукатурки (короед, растирка вертикальная, дождик) - церезит СТ-35 2.5 мм,</p>
-            <p>7. Ремонт примыканий ступеней площадок к стенам, до покраски - адгезионные рем. составом для бетона,</p>
-            <p>8. Окраска стен- финколор минерал стронг (колеровка по согласованию),</p>
-            <p>9. Окраска сапожка, по установленном образцу - финнколор минерал стронг (колеровка по согласованию).</p>
+            <ol>
+                <li>Удаление побелки/шпаклевки до штукатурного слоя,</li>
+                <li>Удаление масляной краски со стен или нанесение глубокой насечки (длинна насечки не менее 5см ,100
+                    насечек на 1кв.м),
+                </li>
+                <li>Грунтование насечки (стены) и масляной краски -грунтовка церезит СТ-19,</li>
+                <li>Монтаж угловых профилей на наружные углы (по необходимости),</li>
+                <li>Оштукатуривание стен, где произведена насечка и отвалившейся штукатурки - штукатурка ротбанд
+                    кнауф,
+                </li>
+                <li>Грунтование стен полностью(верх/низ), подготовка под нанесение декоративной штукатурки - церезит
+                    ст16,
+                </li>
+                <li>Нанесение декоративной штукатурки (короед, растирка вертикальная, дождик) - церезит СТ-35 2.5 мм,
+                </li>
+                <li>Ремонт примыканий ступеней площадок к стенам, до покраски - адгезионные рем. составом для бетона,
+                </li>
+                <li>Окраска стен- финколор минерал стронг (колеровка по согласованию),</li>
+                <li>Окраска сапожка, по установленном образцу - финнколор минерал стронг (колеровка по согласованию).
+                </li>
+            </ol>
         </div>
     </div>
     <div class="block">
@@ -49,7 +61,9 @@
             <h3>Двери секций и кладовок, порталы лифтов, мусоропроводы, эл.щитки</h3>
         </div>
         <div class="list">
-            <p>1. Поготовка под покраску, окраска масляной краской -пф115 цвет серый.</p>
+            <ol>
+                <li>Поготовка под покраску, окраска масляной краской -пф115 цвет серый.</li>
+            </ol>
         </div>
     </div>
     <div class="block">
@@ -57,19 +71,22 @@
             <h3>Окна</h3>
         </div>
         <div class="list">
-            <p>1. Смывка побелки, насечка подоконника, подготовка к монтажу откосов,</p>
-            <p>2. Грунтование смывки – Грунтовка Церезит ст-17.насечки -ст19,</p>
-            <p>3. Монтаж П профиля,</p>
-            <p>4. Монтаж профиля на потолочный откос,</p>
-            <p>5. Монтаж гкл на потолок,</p>
-            <p>6. Монтаж гкл на подоконник с предварительной забутовкой для придания монолитности,</p>
-            <p>7. Монтаж гкл на боковые откосы с максимальным заполнением полостей (исключить эффект барабана),</p>
-            <p>8. Монтаж угловых профилей с сеткой  на наружные углы примыкания,</p>
-            <p>9. Грунтование – грунтовка  СТ - 17,</p>
-            <p>10. Шпатлевание – шпатлевка  Кнауф   Фуген или полимерная,</p>
-            <p>11. Ошкуривание,</p>
-            <p>12. Грунтование -  грунтовка СТ - 17,</p>
-            <p>13. Окраска - тиккурилла евро 20.</p>
+            <ol>
+                <li>Смывка побелки, насечка подоконника, подготовка к монтажу откосов,</li>
+                <li>Грунтование смывки – Грунтовка Церезит ст-17.насечки -ст19,</li>
+                <li>Монтаж П профиля,</li>
+                <li>Монтаж профиля на потолочный откос,</li>
+                <li>Монтаж гкл на потолок,</li>
+                <li>Монтаж гкл на подоконник с предварительной забутовкой для придания монолитности,</li>
+                <li>Монтаж гкл на боковые откосы с максимальным заполнением полостей (исключить эффект барабана),
+                </li>
+                <li>Монтаж угловых профилей с сеткой на наружные углы примыкания,</li>
+                <li>Грунтование – грунтовка СТ - 17,</li>
+                <li>Шпатлевание – шпатлевка Кнауф Фуген или полимерная,</li>
+                <li>Ошкуривание,</li>
+                <li>Грунтование - грунтовка СТ - 17,</li>
+                <li>Окраска - тиккурилла евро 20.</li>
+            </ol>
         </div>
     </div>
     <div class="block">
@@ -77,23 +94,25 @@
             <h3>Прочие работы</h3>
         </div>
         <div class="list">
-            <p>- Проклейка сеткой трещин на потолке и стенах
-            <p>- Демонтаж, укрытие светильников
-            <p>- Укрытие дверей собственников, кнопок звонков, видео камер - пленка, малярная лента
-            <p>- Укрытие пола - пленка, малярная лента
-            <p>- Монтаж снятой проводки-монтажные материалы
-            <p>- Демонтаж, монтаж почтовых ящиков
-            <p>- Монтаж светильников
-            <p>- Вынос бытовых вещей жителей
-            <p>- Вынос, вывоз строительного мусора
-            <p>- Демонтаж, монтаж, окраска перил
-            <p>- Ремонт, окраска торцов лестничных маршей
-            <p>- Подготовка к окраске, окраска газ.труб, батарей отопления
-            <p>- Пронумеровка этажей
-            <p>- Демонтаж деревянных коробок дверей 1эт
-            <p>- Клининг подъезда полностью (окна, двери, светильники, пол, почтовые ящики)
-            <p>- Оплата коммунальных услуг (по согласованию суммы с заказчиком)
-            <p>- Вежливое общение с жителями
+            <ul>
+                <li>Проклейка сеткой трещин на потолке и стенах</li>
+                <li>Демонтаж, укрытие светильников</li>
+                <li>Укрытие дверей собственников, кнопок звонков, видео камер - пленка, малярная лента</li>
+                <li>Укрытие пола - пленка, малярная лента</li>
+                <li>Монтаж снятой проводки-монтажные материалы</li>
+                <li>Демонтаж, монтаж почтовых ящиков</li>
+                <li>Монтаж светильников</li>
+                <li>Вынос бытовых вещей жителей</li>
+                <li>Вынос, вывоз строительного мусора</li>
+                <li>Демонтаж, монтаж, окраска перил</li>
+                <li>Ремонт, окраска торцов лестничных маршей</li>
+                <li>Подготовка к окраске, окраска газ.труб, батарей отопления</li>
+                <li>Пронумеровка этажей</li>
+                <li>Демонтаж деревянных коробок дверей 1эт</li>
+                <li>Клининг подъезда полностью (окна, двери, светильники, пол, почтовые ящики)</li>
+                <li>Оплата коммунальных услуг (по согласованию суммы с заказчиком)</li>
+                <li>Вежливое общение с жителями</li>
+            </ul>
         </div>
     </div>
 </div>
