--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="content">
     <div class="title"><h2>Техническое задание</h2></div>
-    <div class="download"><a href="тз.pages">Скачать</a></div>
+    <div class="download"><a href="ТЗ.docx">Скачать</a></div>
     <div class="block">
         <div class="title">
             <h3>Потолок</h3>
